# mgis-gpu

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  format.sh
elasticity/: CMakeLists.txt  elasticity.cxx  elasticity2.cxx  kernels.cu  kernels.cxx  kernels2.cu  kernels2.cxx
hyperelasticity/: CMakeLists.txt  kernels.cu  kernels.cxx  kernels2.cu  kernels2.cxx  signorini.cxx  signorini2.cxx
include/MGIS/GPU/: Config.hxx  Data.hxx
plasticity/: CMakeLists.txt  kernels.cu  kernels.cxx  kernels2.cu  kernels2.cxx  plasticity.cxx  plasticity2.cxx
src/: CMakeLists.txt  Data.cxx
unit-tests/: CMakeLists.txt  DataTest.cxx  HDF5Test.h5
