set(ELASTICITY_SOURCES)
list(APPEND ELASTICITY_SOURCES elasticity.cxx kernels.cxx)
if(enable-cuda-kernels)
  list(APPEND ELASTICITY_SOURCES kernels.cu)
endif(enable-cuda-kernels)
add_executable(elasticity ${ELASTICITY_SOURCES})
target_link_libraries(elasticity PRIVATE mgis::MFrontGenericInterface)
if(enable-cuda-kernels)
  target_compile_definitions(elasticity PRIVATE "MGIS_GPU_HAS_CUDA_SUPPORT")
  target_compile_options(elasticity PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
  target_link_libraries(elasticity PRIVATE CUDA::cudart)
endif(enable-cuda-kernels)

add_executable(elasticity2 elasticity2.cxx kernels2.cxx)
target_link_libraries(elasticity2 PRIVATE mgis::MFrontGenericInterface)
