set(SIGNORINI_SOURCES)
list(APPEND SIGNORINI_SOURCES signorini.cxx kernels.cxx)
if(enable-cuda-kernels)
  list(APPEND SIGNORINI_SOURCES kernels.cu)
endif(enable-cuda-kernels)
add_executable(signorini ${SIGNORINI_SOURCES})
target_link_libraries(signorini PRIVATE mgis::MFrontGenericInterface)
if(enable-cuda-kernels)
  target_compile_definitions(signorini PRIVATE "MGIS_GPU_HAS_CUDA_SUPPORT")
  target_compile_options(signorini PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
  target_link_libraries(signorini PRIVATE CUDA::cudart)
endif(enable-cuda-kernels)

set(SIGNORINI2_SOURCES)
list(APPEND SIGNORINI2_SOURCES signorini2.cxx kernels2.cxx)
if(enable-cuda-kernels)
  list(APPEND SIGNORINI2_SOURCES kernels2.cu)
endif(enable-cuda-kernels)
add_executable(signorini2 ${SIGNORINI2_SOURCES})
target_link_libraries(signorini2 PRIVATE mgis::MFrontGenericInterface)
if(enable-cuda-kernels)
  target_compile_definitions(signorini2 PRIVATE "MGIS_GPU_HAS_CUDA_SUPPORT")
  target_compile_options(signorini2 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
  target_link_libraries(signorini2 PRIVATE CUDA::cudart)
endif(enable-cuda-kernels)
