set(PLASTICITY_SOURCES)
list(APPEND PLASTICITY_SOURCES plasticity.cxx kernels.cxx)
if(enable-cuda-kernels)
  list(APPEND PLASTICITY_SOURCES kernels.cu)
endif(enable-cuda-kernels)
add_executable(plasticity ${PLASTICITY_SOURCES})
target_link_libraries(plasticity PRIVATE mgis::MFrontGenericInterface)
if(enable-cuda-kernels)
  target_compile_definitions(plasticity PRIVATE "MGIS_GPU_HAS_CUDA_SUPPORT")
  target_compile_options(plasticity PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
  target_link_libraries(plasticity PRIVATE CUDA::cudart)
endif(enable-cuda-kernels)

set(PLASTICITY2_SOURCES)
list(APPEND PLASTICITY2_SOURCES plasticity2.cxx kernels2.cxx)
if(enable-cuda-kernels)
  list(APPEND PLASTICITY2_SOURCES kernels2.cu)
endif(enable-cuda-kernels)
add_executable(plasticity2 ${PLASTICITY2_SOURCES})
target_link_libraries(plasticity2 PRIVATE mgis::MFrontGenericInterface)
if(enable-cuda-kernels)
  target_compile_definitions(plasticity2 PRIVATE "MGIS_GPU_HAS_CUDA_SUPPORT")
  target_compile_options(plasticity2 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
  target_link_libraries(plasticity2 PRIVATE CUDA::cudart)
endif(enable-cuda-kernels)
